<resources>
    <string name="app_name">BlagajnApp</string>
    <string name="btnOdustaniText">Odustani</string>
    <string name="btnSpremiText">Izdaj račun</string>
    <string name="tvNazivText">Naziv</string>
    <string name="tvKolicinaText">Količina</string>
    <string name="tvCijenaText">Cijena</string>
    <string name="tvIznosText">Iznos</string>
    <string name="tvUkupnoText">Ukupno</string>
    <string name="etUsernameHint">Korisničko ime</string>
    <string name="PasswordHint">Lozinka</string>
    <string name="BtnLogin">Prijava</string>
    <string name="MenuItemTitle">Odjava</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
